# motrs

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  webpack.config.js
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: simple_example.rs
examples/2d_multi_object_tracking/: Cargo.toml
examples/mot/: Cargo.toml
examples/mot/src/: main.rs  testing.rs  tracker.rs
examples/mot16_challenge/: .gitignore  Cargo.toml  README.md
examples/mot16_challenge/src/: main.rs  testing.rs  util.rs
examples/multi_object_2d_tracking/: Cargo.toml
examples/multi_object_2d_tracking/src/: main.rs  testing.rs
motrs/: Cargo.toml
motrs/benches/: main.rs
motrs/benches/benchmarks/: mod.rs
motrs/examples/: simple.rs  simple_example.rs
motrs/examples/mot16_challenge/: Cargo.toml
motrs/examples/mot16_challenge/src/: main.rs  util.rs
motrs/examples/multi_object_2d_tracking/: Cargo.toml
motrs/examples/multi_object_2d_tracking/src/: testing.rs
motrs/src/: assignment.rs  filter.rs  lib.rs  matrix.rs  metrics.rs  model.rs  tracker.rs
motrs/tests/: testing.rs  tracker_test.rs
motrs_wasm/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
motrs_wasm/html/: index.html
motrs_wasm/src/: lib.rs
src/: assignment.rs  filter.rs  lib.rs  matrix.rs  metrics.rs  model.rs  testing.rs  tracker.rs
tests/: testing.rs  tracker_test.rs
