[package]
name = "motrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
pathfinding = "3.0.12"
ordered-float = "2.0"

[dev-dependencies]
approx = "*"
assert_approx_eq = "*"
