[package]
name = "motrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
ordered-float = "2.0"
approx = "*"
rand = "*"
rand_distr = "*"
csv = "1.1"
fixedbitset = "0.3"
ndarray = "0.13"
num-traits = "0.2"

[dev-dependencies]
assert_approx_eq = "*"
genawaiter = "0.99.1"
iced = { version = "0.4", features = ["canvas", "tokio", "debug", "image"] }
time = { version = "0.3.5", features = ["local-offset"] }
