[package]
name = "motrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
approx = "*"
ordered-float = "2.0"
rand = "*"
fixedbitset = "0.3"
num-traits = "0.2"

[dev-dependencies]
assert_approx_eq = "*"
genawaiter = "0.99.1"

[workspace]
members = [
    "examples/multi_object_2d_tracking",
    "examples/mot16_challenge",
]
