[package]
name = "motrs_wasm"
version = "0.1.0"
authors = ["uzushino <torattoria.mamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motrs = { path = "../motrs" }
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3.44"
serde = "^1.0.101"
serde_derive = "^1.0.101"
gloo-utils = { version = "0.1", features = ["serde"] }
nalgebra = "0.31.1"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
]

[lib]
crate-type = ["cdylib", "lib"]
name = "motrs_wasm"
bench = false
