[package]
name = "mot16_challenge"
edition = "2021"
publish = false
version = "0.1.0"

[dependencies]
motrs = { path = "../.." }

iced = { version = "0.4.2", features = ["canvas"] }
iced_native = "*"

nalgebra = "*"
genawaiter = "0.99.1"
rand = "*"
rand_distr = "*"
csv = "*"

polars = { version = "*", features = ["lazy", "csv-file"] }
polars-core = { version = "*", features = ["rows", "private"] }
