[package]
name = "multi_object_2d_tracking"
edition = "2021"
publish = false
version = "0.1.0"

[dependencies]
motrs = { path = "../.." }

iced = { version = "0.4.2", features = ["canvas", "image"] }
iced_native = "0.5.1"
async-std = "1.11"

nalgebra = "0.31.0"
genawaiter = "0.99.1"
rand = "*"
rand_distr = "*"
csv = "*"

imageproc = "*"
image = { version = "0.24.1", default-features = false, features = ["jpeg"] }
rusttype = "*"
